# fem_solver

./: .gitignore  README.md  plate_tension.vtk  portal_frame.vtk  pyproject.toml
bench/: bench_quad4_plate.py
docs/: Makefile  make.bat
examples/: 01_simple_truss.py  02_cantilever_beam.py  03_portal_frame.py  04_plane_stress_plate.py  05_rigid_diaphragm_frame.py  06_cantilever_modal.py  07_mises_truss_snapthrough.py  08_hinged_cantilever_pushover.py  09_fiber_cantilever_pushover.py  10_corotational_column_p_delta.py  11_corotational_fiber_column.py  12_displacement_control_epp_plateau.py  13_arc_length_mises_snap_through.py  14_sdof_damped_response.py  15_cantilever_free_vibration.py  16_nonlinear_cyclic_hysteresis.py  17_buckling_mesh_convergence.py  18_force_based_vs_displacement_based.py  19_3d_fiber_column_biaxial.py  20_3d_corotational_p_delta.py  21_3d_corot_fiber_pushover.py  22_response_spectrum_vs_time_history.py  23_shell_ss_plate_navier.py  24_shell_buckling.py  25_shell_tri3_vs_mitc4.py  26_layered_shell_sandwich.py  27_3d_solid_cantilever.py  28_concrete_confined_vs_unconfined.py  29_advanced_dynamics_integrators.py  29_hex8_j2_pushover.py  30_post_processing_workflow.py  31_capacity_design_workflow.py  32_base_isolation.py  33_solver_benchmark.py  34_composite_laminate.py  35_composite_failure.py  36_modal_pushover.py  37_shell_mitc9_convergence.py  38_dkmq4_thin_plate.py  39_csi_hysteresis_catalog.py  (+43 more)
phase21_outputs/: portal_frame.json  portal_modes.vtk  portal_static.vtk
temp_deliverables/: B-G1_calc.html  frame.dxf
tests/: test_aci_column.py  (+134 more)
(+316 files in other folders)
